objects/UPC_Main_Competitors__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell to identify competitors.</description>
        <label>Competitor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Main Competitors</relationshipLabel>
        <relationshipName>Main_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity__c</fullName>
        <description>Created by Nexell</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Main Competitors</relationshipLabel>
        <relationshipName>Main_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UPC_Strengths__c</fullName>
        <description>Field Created by Nexell to inser the Competitors Strengths.</description>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UPC_Weaknesses__c</fullName>
        <description>Field Created by Nexell to identify the competitors weaknesses.</description>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Main Competitors</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Main Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Main Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>